# CellLab

./: .gitignore  CircleHough.py  GraphBased.java  PreProcessing.java  README.md  celllab_mrcnn.py  preprocessing.py
C_OpenCV/segmentation/: .cproject  .project  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  segmentation  segmentation.cpp
C_OpenCV/segmentation/data/usb/: maske_inhib.tif
C_OpenCV/segmentation/data/usb/old/: zytodata1.tiff  zytodata2.tiff
C_OpenCV/segmentation/inc/: cell.hpp  segmentation.hpp
C_OpenCV/segmentation/src/: algorithm.cpp  cell.cpp  colour.cpp  errorhandle.cpp  feature.cpp  fibre.cpp  image.cpp  kmeans.cpp  morph.cpp  noise.cpp  roi.cpp  threshold.cpp  trackbar.cpp  watershed.cpp
C_OpenCV/shape_cyt/shape/: .cproject  .project  CMakeCache.txt  CMakeLists.txt  DisplayImage  Makefile  cmake_install.cmake
Java_OpenIMAJ/old/: PreProcessing.java
Matlab_ImageProcToolbox/: KMeansSegmentationExample.mlx  background.m  bye.ps  circle_hough.mlx  circle_hough_transform.m  edge_morph.m  edge_morph_old.mlx  hello.ps  here.ps  k_means.m  test_colour.m
Matlab_ImageProcToolbox/SuperPixel/: demo.m  segment.mexw64
Python_MaskRCNN/: celllab_mrcnn.py  requirements_chrisy.txt
Python_PIL/cell/: compare_cell_images.py  normaization example.py  test_roc.py
Python_misc/: preprocessing.py
Python_misc/cell/: ipython.html  mask_vis.py  normaization.py  test_histo.py
Python_misc/sdu19/miau_wuff/: project.py  project_e.py  weigths.h5
Python_misc/sdu19/mnist/: exercise_conv.py
Python_misc/sdu19/numpy/: ex_numpy.py  intro_numpy.py
(+41 files in other folders)
